--- a/Assignment2/style.css
+++ b/Assignment2/style.css
@@ -1,3 +1,18 @@
+.header {
+  background-color:rgb(0, 143, 95);
+  padding:5px;
+}
+
+.footer {
+  background-color:rgb(167, 0, 0);
+  padding:5px;
+}
+
+.topnav {
+  background-color:orangered;
+  padding:2px;
+}
+
 .row:after {
   content: "";
   display: table;
@@ -9,9 +24,14 @@
 }
 
 .side{
-  width: 25%;
+  width: 15%;
 }
 
 .middle {
-  width: 75%;
+  width: 85%;
+}
+
+.prefselector {
+  display: inline-block; 
+  margin-right: 10px;
 }
