--- a/Assignment2/mystyle.css
+++ b/Assignment2/mystyle.css
@@ -15,7 +15,8 @@ body {
 
 .footer {
   background-color: rgb(132, 190, 209);
-  padding:5px;
+  padding: 5px;
+  text-align: center;
 }
 
 /* Style the navigation container */
