--- a/Assignment2/mystyle.css
+++ b/Assignment2/mystyle.css
@@ -175,7 +175,6 @@ button, input[type=button] {
     
 }
 
-/* Duration section styles - specific to cruises page */
 #cruises .duration {
     display: flex;
     align-items: center;
@@ -250,7 +249,23 @@ button, input[type=button] {
     border-radius: 4px;
 }
 
-/* Submit button styles - specific to cruises page */
+.rooms {
+    margin-left: 40px;
+    margin-right: 200px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.rooms input[type="number"] {
+
+    width: 60px;
+    padding: 6px 5px;
+    margin: 4px 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
 #cruises .submit {
     display: flex;
     align-items: center;
