--- a/Assignment2/assets/css/mystyle.css
+++ b/Assignment2/assets/css/mystyle.css
@@ -129,7 +129,7 @@ body {
 }
 
 /* Input field styles */
-input[type=text] {
+input[type=text], input[type=password], input[type=email] {
     width: 20%;
     padding: 6px 5px;
     margin: 4px 0;
